--- a/etc/skel/.config/arco-dusk/Makefile
+++ b/etc/skel/.config/arco-dusk/Makefile
@@ -52,8 +52,9 @@ install: all
 	sed "s/VERSION/${VERSION}/g" < dusk.1 > ${DESTDIR}${MANPREFIX}/man1/dusk.1
 	chmod 644 ${DESTDIR}${MANPREFIX}/man1/dusk.1
 	mkdir -p /usr/share/xsessions
-	cp -n dusk.desktop /usr/share/xsessions/
-	chmod 644 /usr/share/xsessions/dusk.desktop
+	# in PKGBUILD we create them
+	# cp -n dusk.desktop /usr/share/xsessions/
+	# chmod 644 /usr/share/xsessions/dusk.desktop
 
 uninstall:
 	rm -f ${DESTDIR}${PREFIX}/bin/dusk\
